--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,7 +4,7 @@ node{
   }
   stage{'Compile-Package'}{
     
-    def mvnHome = tool name: 'mavan3', type: 'maven'
+    def mvnHome = tool name: 'maven-3', type: 'maven'
     sh "${mvnHome}/bin/mvn package"
   }
 }
